# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: gendiff.yml  pyci.yml
gendiff/: __init__.py  cli.py  engine.py  gen_tree.py  parser.py
gendiff/formaters/: json_format.py  plain.py  plain_format.py  stylish.py  stylish_format.py
gendiff/scripts/: diff_out_my_stylish.txt  file1.yml  file2.yml  gendiff.py  parsing.py  stylish.py
tests/: test_gendiff.py  test_output.py
tests/fixtures/: file1.yml  file2.json  file2.yml  file_for_test_json.json  file_for_test_plain.txt  file_for_test_yaml.txt  file_out.txt
