[tool.poetry]
name = "gendiff-project-2"
version = "0.1.0"
description = ""
authors = ["znammikhail <znamenskymihail@gmail.com>"]
packages = [
  { include = "gendiff" },
]
repository = 'https://github.com/znammikhail/python-project-50'

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
